--- a/resources/css/ui-default.css
+++ b/resources/css/ui-default.css
@@ -598,3 +598,4 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .noafter:after {display:none;}
 
 .lh130 {line-height:1.3!important;}
+.ff-42DotSans {font-family:'42DotSans'!important;}
