--- a/resources/css/ui-mediaquery.css
+++ b/resources/css/ui-mediaquery.css
@@ -40,8 +40,10 @@
     .section-tablet-right > .mt40:first-child {margin-top:16px!important;}
     .section-tablet-row .bottom-btn {margin:0;}
 
-    .section-tablet-half {display:flex;flex-direction:row;justify-content:space-between;max-height:calc(100vh - 52px - 94px);overflow:hidden;padding:0;margin:0 -16px;background:var(--background-bg_lightGray);}
-    .section-tablet-half .section {flex:0 0 calc(50% - 4px);max-width:calc(50% - 4px);overflow:auto;padding:0 16px;background-color:var(--background-bg_white);}
+    .section-tablet-half {display:flex;flex-direction:row;justify-content:space-between;max-height:calc(100vh - 52px - 94px);overflow:hidden;padding:0;margin:0 -16px;}
+    .section-tablet-half .section {flex:1;overflow:auto;padding:0 16px;background-color:var(--background-bg_white);}
+    .section-tablet-half .section:last-child {border-radius:40px 0 0 0;background: var(--background-bg_lightGray);}
+    .section-tablet-half .section:last-child > * {background-color:transparent;}
     .section-tablet-half .divide {height:4px;background:var(--background-bg_lightGray);}
     .bottom-btn .btn-wrap .btn-outlined {flex:0 0 302px;}
 
@@ -117,6 +119,17 @@
     .business-card-customer-list {display:grid;grid-template-columns:repeat(2,1fr);gap:12px;padding:0;margin-top:12px;}
     .business-card-customer {padding:24px 40px;border-radius:8px;border:1px solid rgba(12, 12, 13, 0.08);box-shadow:0px 0.5px 0px 0px rgba(12, 12, 13, 0.04), 0px 2px 4px -1px rgba(12, 12, 13, 0.04);}
 
+    .visual-headline {height:164px;}
+    .visual-headline figure picture {z-index:0;align-items:flex-end;}
+    .visual-headline figure figcaption {position:relative;z-index:1;}
+    .visual-headline figure picture img {height:154px}
 
+    .main-schedule-list ul li:nth-child(n+3) {display:block!important;}
+    .main-schedule-list .view-more {display:none;}
+    .main-stock-section {padding:40px 0 16px;}
+    .main-figure-section {padding:40px 0 16px;}
+    .main-figure-list figure picture {background-color:var(--surface-surface);}
+    .main-banner-section {padding:40px 0 16px;}
+    .main-notice-section {padding:40px 0 16px;}
 }
 
