--- a/resources/css/ui-mediaquery.css
+++ b/resources/css/ui-mediaquery.css
@@ -119,6 +119,7 @@
     .business-card-customer-list {display:grid;grid-template-columns:repeat(2,1fr);gap:12px;padding:0;margin-top:12px;}
     .business-card-customer {padding:24px 40px;border-radius:8px;border:1px solid rgba(12, 12, 13, 0.08);box-shadow:0px 0.5px 0px 0px rgba(12, 12, 13, 0.04), 0px 2px 4px -1px rgba(12, 12, 13, 0.04);}
 
+    .main-schedule-section {padding-bottom:100px;}
     .visual-headline {height:164px;}
     .visual-headline figure picture {z-index:0;align-items:flex-end;}
     .visual-headline figure figcaption {position:relative;z-index:1;}
@@ -130,6 +131,9 @@
     .main-figure-section {padding:40px 0 16px;}
     .main-figure-list figure picture {background-color:var(--surface-surface);}
     .main-banner-section {padding:40px 0 16px;}
-    .main-notice-section {padding:40px 0 16px;}
+    .main-notice-section {padding:40px 0 100px;}
+    .main-notice-list a {display:flex;align-items:center;justify-content:space-between;border-bottom:none;gap:16px;}
+    .main-notice-list a p {white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+    .main-notice-list a .date {margin-top:0;white-space:nowrap;}
 }
 
