--- a/resources/css/ui-mediaquery.css
+++ b/resources/css/ui-mediaquery.css
@@ -119,7 +119,7 @@
     .business-card-customer-list {display:grid;grid-template-columns:repeat(2,1fr);gap:12px;padding:0;margin-top:12px;}
     .business-card-customer {padding:24px 40px;border-radius:8px;border:1px solid rgba(12, 12, 13, 0.08);box-shadow:0px 0.5px 0px 0px rgba(12, 12, 13, 0.04), 0px 2px 4px -1px rgba(12, 12, 13, 0.04);}
 
-    .main-schedule-section {padding-bottom:100px;}
+    .main-schedule-section {padding:48px 0 100px;}
     .visual-headline {height:164px;}
     .visual-headline figure picture {z-index:0;align-items:flex-end;}
     .visual-headline figure figcaption {position:relative;z-index:1;}
