--- a/publish/components/component_icon.html
+++ b/publish/components/component_icon.html
@@ -312,6 +312,24 @@
 			</div>
 			<hr>
 			<div class="ui-guide-box">
+				<h2>icon-fav-bg</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-fav-bg"></i>
+					<i class="icon-only icon-36 icon-fav-bg"></i>
+					<i class="icon-only icon-32 icon-fav-bg"></i>
+					<i class="icon-only icon-28 icon-fav-bg"></i>
+					<i class="icon-only icon-26 icon-fav-bg"></i>
+					<i class="icon-only icon-24 icon-fav-bg"></i>
+					<i class="icon-only icon-20 icon-fav-bg"></i>
+					<i class="icon-only icon-18 icon-fav-bg"></i>
+					<i class="icon-only icon-16 icon-fav-bg"></i>
+					<i class="icon-only icon-15 icon-fav-bg"></i>
+					<i class="icon-only icon-14 icon-fav-bg"></i>
+					<i class="icon-only icon-12 icon-fav-bg"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
 				<h2>icon-noresult</h2>
 				<div class="guide-column-list">
 					<i class="icon-only icon-48 icon-noresult bg-icon-gray_1"></i>
@@ -1029,6 +1047,24 @@
 					<i class="icon-only icon-15 icon-file-loader bg-icon-gray_1"></i>
 					<i class="icon-only icon-14 icon-file-loader bg-icon-gray_1"></i>
 					<i class="icon-only icon-12 icon-file-loader bg-icon-gray_1"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-comment</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-comment bg-icon-gray_2"></i>
+					<i class="icon-only icon-36 icon-comment bg-icon-gray_2"></i>
+					<i class="icon-only icon-32 icon-comment bg-icon-gray_2"></i>
+					<i class="icon-only icon-28 icon-comment bg-icon-gray_2"></i>
+					<i class="icon-only icon-26 icon-comment bg-icon-gray_2"></i>
+					<i class="icon-only icon-24 icon-comment bg-icon-gray_2"></i>
+					<i class="icon-only icon-20 icon-comment bg-icon-gray_2"></i>
+					<i class="icon-only icon-18 icon-comment bg-icon-gray_2"></i>
+					<i class="icon-only icon-16 icon-comment bg-icon-gray_2"></i>
+					<i class="icon-only icon-15 icon-comment bg-icon-gray_2"></i>
+					<i class="icon-only icon-14 icon-comment bg-icon-gray_2"></i>
+					<i class="icon-only icon-12 icon-comment bg-icon-gray_2"></i>
 				</div>
 			</div>
 		</div>
