--- a/resources/css/ui-mediaquery.css
+++ b/resources/css/ui-mediaquery.css
@@ -16,7 +16,7 @@
     .input-wrap.input-datepicker button {font-size:14px;}
     .stock-index-list a {}
 }
-@media (max-width:767px) {
+@media (max-width:767px), (orientation:portrait)  {
     .filter-combination .btn-border {display:flex;}
     .filter-combination .sort-list {display:none;}
     .is-mobile {display:block;}
@@ -31,7 +31,7 @@
 
 }
 
-@media (min-width:768px) {
+@media (min-width:768px) and (orientation:landscape) {
     .is-mobile {display:none;}
     .is-tablet {display:block;}
 
