--- a/resources/css/ui-mediaquery.css
+++ b/resources/css/ui-mediaquery.css
@@ -41,7 +41,7 @@
     .section-has-bottom {max-height:calc(100vh - 52px - 76px);}
     .section-tablet-row .section-tablet-left,
     .section-tablet-row .section-tablet-right {overflow:auto;padding-bottom:24px;padding:0 20px 24px;}
-    .section-tablet-left {flex:0 0 44.43%;}
+    .section-tablet-left {flex:0 0 44.43%;padding-bottom:300px!important;}
     .section-tablet-right {flex:0 0 calc(100% - 44.43%);}
     .section-tablet-right > .mt40:first-child {margin-top:16px!important;}
 
