--- a/publish/components/component_icon.html
+++ b/publish/components/component_icon.html
@@ -961,6 +961,24 @@
 			</div>
 			<hr>
 			<div class="ui-guide-box">
+				<h2>icon-privacy</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-privacy"></i>
+					<i class="icon-only icon-36 icon-privacy"></i>
+					<i class="icon-only icon-32 icon-privacy"></i>
+					<i class="icon-only icon-28 icon-privacy"></i>
+					<i class="icon-only icon-26 icon-privacy"></i>
+					<i class="icon-only icon-24 icon-privacy"></i>
+					<i class="icon-only icon-20 icon-privacy"></i>
+					<i class="icon-only icon-18 icon-privacy"></i>
+					<i class="icon-only icon-16 icon-privacy"></i>
+					<i class="icon-only icon-15 icon-privacy"></i>
+					<i class="icon-only icon-14 icon-privacy"></i>
+					<i class="icon-only icon-12 icon-privacy"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
 				<h2>icon-notext</h2>
 				<div class="guide-column-list">
 					<i class="icon-only icon-48 icon-notext bg-icon-gray_1"></i>
