--- a/resources/css/ui-mediaquery.css
+++ b/resources/css/ui-mediaquery.css
@@ -38,7 +38,7 @@
     /* ui-layout */
     .section-tablet {padding:0 32px;}
     .section-tablet-row {display:flex;flex-direction:row;max-height:calc(100vh - 52px);overflow:hidden;padding:0 28px;}
-    .section-has-bottom {max-height:calc(100vh - 52px - 76px);}
+.section-has-bottom {max-height:calc(100vh - 52px - 76px);}
     .section-tablet-row .section-tablet-left,
     .section-tablet-row .section-tablet-right {overflow:auto;padding-bottom:24px;padding:0 20px 24px;}
     .section-tablet-left {flex:0 0 44.43%;}
@@ -78,7 +78,7 @@
         animation:mmslideLeftOut .5s cubic-bezier(0, 0, .2, 1);
     }
 
-    .micromodal-slide-bottom-tablet .modal__container {max-height:100%;border-radius:0;}
+    .micromodal-slide-bottom-tablet .modal__container {max-height:100%;height:100%;border-radius:0;}
 
     .datepicker-wrap-month .ui-datepicker-calendar td span,
     .datepicker-wrap-month .ui-datepicker-calendar td a {height:101.33px;}
